# ohs_backend

./: .dockerignore  .env.docker.example  .env.example  .gitignore  CHANGELOG.md  GETTING_STARTED.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Capstone347_Deliverables/01_Git_Repository/: Capstone347_RepositoryLinks.md
alembic/: env.py
alembic/versions/: 26532d911d8e_add_stripe_session_columns_to_order_.py  2e7cabebc286_add_the_rest_of_the_tables.py  3a8f1e2d5c9b_add_ix_orders_created_at.py  41e2314c64cd_add_sjp_generation_jobs_table.py  4e7c2ab2005b_merge_order_index_and_auth_otp_branches.py  6c95068c8ff8_add_core_tables.py  7d4a9c8e1b2f_add_industry_specific_plan_seed.py  8202b693ce2a_initial_tables.py  9a3d1f6c4b21_add_auth_otp_requests_table.py  9cf2a7f8c10f_add_sjp_toc_entries_and_sjp_contents_.py  (+6 more)
app/: config.py  main.py
app/api/: dependencies.py
docker/: Dockerfile
docs/: ADMIN_API.md  API_OVERVIEW.md  ARCHITECTURE.md  DEVELOPMENT_MODES.md  DOCKER_GUIDE.md  FEATURE_COMPLIANCE_GAP_CHECKER.md  FEATURE_DOCUMENT_SECTION_FEEDBACK.md  FEATURE_SHAREABLE_REVIEW_LINK.md  GETTING_STARTED.md  INDUSTRY_INTAKE_RESEARCH.md  PLAN.md  PYTHON_BACKEND_CONCEPTS.md  QUICK_REFERENCE.md  SJP_FRONTEND_GUIDE.md  TROUBLESHOOTING.md  erd.drawio  fe-backend-api-contract.md
scripts/: generate_templates.py  preprocess_real_template.py  seed_plans.py
tests/: conftest.py  test_document_generation.py
(+155 files in other folders)
